--- a/views/catalogue.ejs
+++ b/views/catalogue.ejs
@@ -25,7 +25,7 @@
     <body style="background-color: black;">
 
 
-      <%- include('header'); -%>
+      <%- include('login-header'); -%>
 
 
       <div class="head-slides">
@@ -62,7 +62,7 @@
           <p class="our-team-content">become the best guitar player you can be.</p>
           </div>
       <div class = "video_box">
-          <video poster="images/logo.jpg"  id="home-video" src="images/catalogue-video.mp4" type="video/mp4" controls></video>
+          <video  id="home-video" src="images/catalogue-video.mp4" type="video/mp4" controls></video>
       </div>
   </div>
 
@@ -119,6 +119,7 @@
 
           <div class="rock">
 
+            <div class="beginner">
             <div class="title-seeall">
                 <div class="title">
             <h1 style="color: rgb(255, 255, 255); font-family: 'Bruno Ace', cursive;">ROCK</h1>
@@ -188,8 +189,7 @@
                       <div class="card-body">
                         <h6 class="card-title">Easy Metal Songs</h6>
                         <h6 class="card-title">By Carl Brown</h6>
-                        <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
-                      </div>
+                     </div>
                     </div>
                   </div>
 
@@ -199,8 +199,7 @@
                       <div class="card-body">
                         <h6 class="card-title">Famous Solos</h6>
                         <h6 class="card-title">By Carl Brown</h6>
-                        <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
-                      </div>
+                       </div>
                     </div>
                   </div>
 
@@ -211,7 +210,6 @@
                     <div class="card-body">
                       <h6 class="card-title">Metal Improvisation Level 2</h6>
                       <h6 class="card-title">By Carl Brown</h6>
-                      <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
                     </div>
                   </div>
                 </div>
@@ -236,9 +234,7 @@
                       <a href="/coursedescpage"><img src="images/acoustic-blues.jpg" style="height: 197px; width: 347px ;" class="card-img-top" alt="..."></a>
                       <div class="card-body">
                         <h6 class="card-title">Acoustic Blues</h6>
-                        <h6 class="card-title">By Marty Schwartz</h6>
-                        <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
-                      </div>
+                        <h6 class="card-title">By Marty Schwartz</h6> </div>
                     </div>
                   </div>
 
@@ -247,9 +243,7 @@
                     <a href="#"><img src="images/blues-solos.jpg" class="card-img-top" style="height: 197px; width: 347px ;" alt="..."></a>
                     <div class="card-body">
                       <h6 class="card-title">Blues Solos</h6>
-                      <h6 class="card-title">By Justin Young</h6>
-                      <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
-                    </div>
+                      <h6 class="card-title">By Justin Young</h6></div>
                   </div>
                 </div>
               </div>
@@ -276,9 +270,7 @@
                       <a href="/coursedescpage"><img src="images/uke-andy.jpg" style="height: 197px; width: 347px ;" class="card-img-top" alt="..."></a>
                       <div class="card-body">
                         <h6 class="card-title">10 Day Ukulele Starter</h6>
-                        <h6 class="card-title">By Andy Gilmour</h6>
-                        <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
-                      </div>
+                        <h6 class="card-title">By Andy Gilmour</h6></div>
                     </div>
                   </div>
 
@@ -287,9 +279,7 @@
                     <a href="#"><img src="images/uke-justin.jpg" class="card-img-top" style="height: 197px; width: 347px ;" alt="..."></a>
                     <div class="card-body">
                       <h6 class="card-title">Ukulele for Beginners</h6>
-                      <h6 class="card-title">By Justin Young</h6>
-                      <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
-                    </div>
+                      <h6 class="card-title">By Justin Young</h6></div>
                   </div>
                 </div>
               </div>
@@ -315,9 +305,7 @@
                     <a href="/coursedescpage"><img src="images/mt-andy.jpg" style="height: 197px; width: 347px ;" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <h6 class="card-title">Music Theory</h6>
-                      <h6 class="card-title">By Andy Gilmour</h6>
-                      <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
-                    </div>
+                      <h6 class="card-title">By Andy Gilmour</h6></div>
                   </div>
                 </div>
 
@@ -344,9 +332,7 @@
                     <a href="/coursedescpage"><img src="images/gear-andy.jpg" style="height: 197px; width: 347px ;" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <h6 class="card-title">Guitars, Amps And Pedals</h6>
-                      <h6 class="card-title">By Andy Gilmour</h6>
-                      <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
-                    </div>
+                      <h6 class="card-title">By Andy Gilmour</h6> </div>
                   </div>
                 </div>
 
@@ -355,9 +341,7 @@
                   <a href="#"><img src="images/gear-justin.jpg" class="card-img-top" style="height: 197px; width: 347px ;" alt="..."></a>
                   <div class="card-body">
                     <h6 class="card-title">Set up your electric guitar</h6>
-                    <h6 class="card-title">By Justin Young</h6>
-                    <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
-                  </div>
+                    <h6 class="card-title">By Justin Young</h6></div>
                 </div>
               </div>
             </div>
