--- a/public/css/catalogue.css
+++ b/public/css/catalogue.css
@@ -51,6 +51,11 @@ head-slides{
 .courses{
     background-color: rgb(34, 34, 34);
     padding-bottom: 10px;
+    /* margin-left: 20px; */
+}
+
+.beginner{
+    margin-left: 20px;
 }
 
 
