--- a/public/css/header.css
+++ b/public/css/header.css
@@ -29,12 +29,13 @@
 }
 
 .specific .navbar {
+    margin-bottom: 50px;
     color: rgba(0, 0, 35, 0.84);
 
 }
 
 .specific .navbar ul {
-    overflow: auto;
+
 
 }
 
@@ -92,3 +93,54 @@
 
 
 }
+
+button{
+    background-color: black;
+    border-style: none;
+}
+
+
+.dropbtn {
+    background-color: #04AA6D;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+   display: none;
+    position: absolute;
+    right: 0;
+    background-color: #000000;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {background-color: #000000;}
+  .dropdown:hover .dropdown-content {display: block;}
+  .dropdown:hover .dropbtn {background-color: #3e8e41;}
+
+/* 
+  .prof-icon{
+    
+  } */
+
+  .prof-icon:hover{
+    transition: 0.3s;
+    transform: rotateX(180deg);
+  }
