--- a/views/login-header.ejs
+++ b/views/login-header.ejs
@@ -19,49 +19,58 @@
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&family=Special+Elite&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace&display=swap" rel="stylesheet">
 
     </head>
     <body>
-        
+
         <div class="upper-head">
 
             <div class="top-logo">
-                <img src="../public/images/logo2.jpg" width="120" height="120" class="center">
+                <img src="images/logo2.jpg" width="120" height="120" class="center">
             </div>
-
+    
             <div class="title-text">
                 <h1 class="title">MASTER OF MUSICS</h1>
                 <p class="preheader-text">Master your music skills with the best music lessons!</p>
             </div>
-        </div>
+        </div> 
 
+        <div class="specific">
         <header>
             <nav class="navbar">
                 <ul>
-                    <li><a href="#">SPOTLIGHT</a></li>
-                    <li><a href="#">OUR INSTRUCTORS</a></li>
-                    <li><a href="#">FAQs</a></li>
-                    <li><a href="#">CONTACT US</a></li>
-                   <% if (user) { %>
-                    <div> <%= (user.username) %></div>
-                    <%} else{ %>
-                        <li><a href="#">Register</a></li>
-                        <li><a href="#">Login</a></li>
-                    <%} %>
-                    <li><a href="#">CATALOGUE</a></li>
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#"><img src="../public/images/guitariconnav.png" class="icon" width="64"
-                                height="64"></a></li>
+                    <li>
+                    <div class="dropdown" style="float:right;">
+                        <button><img class="prof-icon" src="images/profile-icon.png"></button>
+                    <div class="dropdown-content">
+                        <a href="#">Dashboard</a>
+                        <a href="#">Edit Profile</a>
+                        <a href="#">Log Out</a>
+                      </div>
+                    </div>
+                </li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li><a href="/spotlight">SPOTLIGHT</a></li>
+                    <li><a href="/wishlist">WISHLIST</a></li>
+                    <li><a href="/instructor">OUR INSTRUCTORS</a></li>
+                    <li><a href="/faq">FAQs</a></li>
+                    <li><a href="/contactus">CONTACT US</a></li>
+                    
+                    <li><a href="/catalogue">CATALOGUE</a></li>
+                    <li><a href="/">HOME</a></li>
+                    <li><a href="/"><img src="images/guitariconnav.png" class="icon" width="64" height="64"></a></li>
 
 
                 </ul>
             </nav>
         </header>
-
-
+    </div>
+        
         <script src="" async defer></script>
-
-
-
     </body>
 </html>
