Course Page linking

--- a/public/css/wishlist.css
+++ b/public/css/wishlist.css
@@ -227,6 +227,16 @@ margin-bottom: 1.6rem;
     
 }
 
+.courselink{
+    color: white; 
+    text-decoration: none;
+}
+
+.courselink:hover{
+    color: #2874f0;
+    transform: scale(1.09);
+}
+
 .delicon{
     display: inline-block;
     width: 20px;
