--- a/views/login-header.ejs
+++ b/views/login-header.ejs
@@ -6,7 +6,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/header.css">
+        <link rel="stylesheet" href="/css/header.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cabin&family=Lobster&family=Montserrat:ital,wght@1,100&family=Oswald:wght@300;400&family=Oxygen:wght@300;700&family=Prompt:wght@600&family=Quicksand:wght@300&family=Righteous&family=Secular+One&family=Tilt+Prism&display=swap" rel="stylesheet">
@@ -27,7 +27,7 @@
         <div class="upper-head">
 
             <div class="top-logo">
-                <img src="images/logo2.jpg" width="120" height="120" class="center">
+                <img src="/images/logo2.jpg" width="120" height="120" class="center">
             </div>
     
             <div class="title-text">
@@ -42,7 +42,7 @@
                 <ul>
                     <li>
                     <div class="dropdown" style="float:right;">
-                        <button><img class="prof-icon" src="images/profile-icon.png"></button>
+                        <button><img class="prof-icon" src="/images/profile-icon.png"></button>
                     <div class="dropdown-content">
                         <a href="#">Dashboard</a>
                         <a href="#">Edit Profile</a>
@@ -63,7 +63,7 @@
                     
                     <li><a href="/catalogue">CATALOGUE</a></li>
                     <li><a href="/">HOME</a></li>
-                    <li><a href="/"><img src="images/guitariconnav.png" class="icon" width="64" height="64"></a></li>
+                    <li><a href="/"><img src="/images/guitariconnav.png" class="icon" width="64" height="64"></a></li>
 
 
                 </ul>
