--- a/views/wishlist.ejs
+++ b/views/wishlist.ejs
@@ -68,7 +68,7 @@
 
                                 <div class="wishitemleft d-flex flex-column">
                                   <div class="title2">
-                                    <a><%= user.wishlist[i].title %></a>
+                                    <a href = "http://localhost:8000/coursedescpage/<%=user.wishlist[i]._id%>" class = "courselink"><%= user.wishlist[i].title %></a>
                                   </div>
 
                                   <div class="teacher">
