--- a/views/wishlist.ejs
+++ b/views/wishlist.ejs
@@ -12,7 +12,7 @@
     <title>Wishlist</title>
 </head>
 <body style="background-color: #0f0707;">
-  <%- include('header'); -%>
+  <%- include('login-header'); -%>
  <div class="bodyMain">
     <div class="outer3">
     <div>
