Add to Wishlist and Purchase

--- a/views/coursedescpage.ejs
+++ b/views/coursedescpage.ejs
@@ -77,7 +77,7 @@
                                     <a href="/wishlist" class="btn btn-dark">Already in Wishlist</a>
                                  <% } %> -->
                                   
-                                    <a href="#" class="btn btn-dark">Add to Wishlist</a>
+                                    <a href="/add-to-wl/<%= course._id %>" class="btn btn-dark">Add to Wishlist</a>
                                     
                                     
 
