--- a/views/coursedescpage.ejs
+++ b/views/coursedescpage.ejs
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cabin&family=Lobster&family=Montserrat:ital,wght@1,100&family=Oswald:wght@300;400&family=Oxygen:wght@300;700&family=Prompt:wght@600&family=Quicksand:wght@300&family=Righteous&family=Secular+One&family=Tilt+Prism&display=swap" rel="stylesheet">
 
     <link rel = "stylesheet" href = "/css/coursedescpage.css">
-    <title>Course</title>
+    <title><%= course.title %></title>
 </head>
 <body>
     <%- include('header'); -%>
