--- a/views/header.ejs
+++ b/views/header.ejs
@@ -38,7 +38,7 @@
 
         <div class="specific">
         <header>
-            <nav class="navbar">
+            <nav class="navbar" style="margin-bottom: 0px;">
                 <ul><li><a href="/login">SIGN IN</a></li>
                     <li><a href="#">|</a></li>
                     <li><a href="/register">SIGN UP</a></li>
