--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -8,8 +8,8 @@
     <title> Welcome to Master of Musics!</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="homepage.js"></script>
-    <link rel="stylesheet" href="css/homestyle.css">
+    <script src="/homepage.js"></script>
+    <link rel="stylesheet" href="/css/homestyle.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cabin&family=Lobster&family=Montserrat:ital,wght@1,100&family=Oswald:wght@300;400&family=Oxygen:wght@300;700&family=Prompt:wght@600&family=Quicksand:wght@300&family=Righteous&family=Secular+One&family=Tilt+Prism&display=swap" rel="stylesheet">
@@ -96,37 +96,37 @@
     <div class="container text-center" style="color: aliceblue;">
         <div class="row" id="col1">
             <div class="col" >
-                <a href="/beginnercoursedesc"><img src="images/beginnerpic.jpg" style="width: 360px; height: 180px;" class="grid-element"></a>
+                <a href="/beginnercoursedesc"><img src="/images/beginnerpic.jpg" style="width: 360px; height: 180px;" class="grid-element"></a>
             </div>
             <div class="col" >
-                <a href="/rockcoursedesc"><img src="images/course_rock.jpg" style="width: 360px; height: 180px;" class="grid-element"></a>
+                <a href="/rockcoursedesc"><img src="/images/course_rock.jpg" style="width: 360px; height: 180px;" class="grid-element"></a>
             </div>
             <div class="col" >
-                <a href="#"><img src="images/metalpic.jpg" style="width: 360px; height: 180px;" class="grid-element"></a>
-            </div>
-        </div>
-
-        <div class="row" id="col1">
-            <div class="col" >
-                <a href="#"><img src="images/bluespic.jpg" style="width: 360px; height: 180px;" class="grid-element"></a>
-            </div>
-            <div class="col" >
-                <a href="#"><img src="images/acousticpic.jpg" style="width: 360px; height: 180px;" class="grid-element"></a>
-            </div>
-            <div class="col" >
-                <a href="#"><img src="images/musictheorypic.jpg" style="width: 360px; height: 180px;" class="grid-element"></a>
+                <a href="#"><img src="/images/metalpic.jpg" style="width: 360px; height: 180px;" class="grid-element"></a>
             </div>
         </div>
 
         <div class="row" id="col1">
             <div class="col" >
-                <a href="#"><img src="images/guitartone.jpg" style="width: 360px; height: 180px;" class="grid-element"></a>
+                <a href="#"><img src="/images/bluespic.jpg" style="width: 360px; height: 180px;" class="grid-element"></a>
             </div>
             <div class="col" >
-                <a href="#"><img src="images/legendstyles.jpg" style="width: 360px; height: 180px;" class="grid-element"></a>
+                <a href="#"><img src="/images/acousticpic.jpg" style="width: 360px; height: 180px;" class="grid-element"></a>
             </div>
             <div class="col" >
-                <a href="#"><img src="images/guitartechnique.jpg" style="width: 360px; height: 180px;" class="grid-element"></a>
+                <a href="#"><img src="/images/musictheorypic.jpg" style="width: 360px; height: 180px;" class="grid-element"></a>
+            </div>
+        </div>
+
+        <div class="row" id="col1">
+            <div class="col" >
+                <a href="#"><img src="/images/guitartone.jpg" style="width: 360px; height: 180px;" class="grid-element"></a>
+            </div>
+            <div class="col" >
+                <a href="#"><img src="/images/legendstyles.jpg" style="width: 360px; height: 180px;" class="grid-element"></a>
+            </div>
+            <div class="col" >
+                <a href="#"><img src="/images/guitartechnique.jpg" style="width: 360px; height: 180px;" class="grid-element"></a>
             </div>
         </div>
     </div>
