--- a/views/login-header.ejs
+++ b/views/login-header.ejs
@@ -38,15 +38,15 @@
 
         <div class="specific">
         <header>
-            <nav class="navbar">
+            <nav class="navbar" style="margin-bottom: 0px;">
                 <ul>
                     <li>
                     <div class="dropdown" style="float:right;">
                         <button><img class="prof-icon" src="/images/profile-icon.png"></button>
                     <div class="dropdown-content">
-                        <a href="#">Dashboard</a>
+                        <a href="/wishlist">Dashboard</a>
                         <a href="#">Edit Profile</a>
-                        <a href="#">Log Out</a>
+                        <a href="/logout">Log Out</a>
                       </div>
                     </div>
                 </li>
