--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/register.css">
+    <link rel="stylesheet" href="/css/register.css">
     <title>Login</title>
 </head>
 
@@ -71,7 +71,7 @@
 
             </div>
             <div class="col-md-4 register container-2">
-                <img src="images/signup1.jpg" class="icon-2" alt="image" />
+                <img src="/images/signup1.jpg" class="icon-2" alt="image" />
                 <div class="centered">
                     <div>Welcome Back!</div>
                 <div>Login to</div>
@@ -95,8 +95,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-    <script src="js/Login.js"></script>
-    <script src="js/animation.js"></script>
+    <script src="/js/Login.js"></script>
+    <script src="/js/animation.js"></script>
     <%- include('footer'); -%>
 </body>
 
