--- a/views/yourcourses.ejs
+++ b/views/yourcourses.ejs
@@ -88,7 +88,7 @@
                                   </div>
 
                                   <div class="price">
-                                    <div><p>$<%= user.purchased[i].price %></p></div>
+                                    <div><p></p></div>
                                   </div>
                                 </div>
 
