--- a/views/wishlist.ejs
+++ b/views/wishlist.ejs
@@ -32,7 +32,7 @@
                               <h5 class="proftitle2 align-items-end" >Welcome, <%=user.fullname.split(' ')[0]%></h5>
                             </div>
                             <ul class="list-group list-group-flush" style="font-size: 16px;">
-                              <li class="list-group-item atb" style=" border-bottom: 2px solid grey; background-color: #181a1b;"><a href = "">Your Profile</a></li>
+                              <li class="list-group-item atb" style=" border-bottom: 2px solid grey; background-color: #181a1b;"><a href = "/student-profile">Your Profile</a></li>
                               <li class="list-group-item atb" style="border-bottom: 2px solid grey;  background-color: #181a1b;"><a href = "/wishlist"> Wishlist</a></li>
                               <li class="list-group-item atb" style="border-bottom: 2px solid grey;  background-color: #181a1b;"><a href = "/yourcourses">Your Courses</a></li>
                               <li class="list-group-item atb" style="border-bottom: 2px solid grey;  background-color: #181a1b;"><a href = "/">Home</a></li>
