--- a/public/css/contactus.css
+++ b/public/css/contactus.css
@@ -7,7 +7,22 @@ line-height: 27px;
 text-transform: none;
 letter-spacing: 0px;
 background-color: #181a1b;
+font-family: 'Quicksand', sans-serif;
 }
+
+
+.contact-bg{
+  background-color: black;
+  background-image: url(../images/logo1-blur.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-origin: content-box;
+
+  
+  
+}
+
+
 
 .wholepage a {
   transition: .2s ease-in-out;
@@ -129,6 +144,7 @@ margin-bottom: 0px;
 
 
 .contact-wrapper {
+  /* background-color: #000; */
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -177,6 +193,9 @@ textarea {
   padding-left: 65px;
 }
 
+.form-bg{
+  background-color: #000;
+}
 
 @media screen and (max-width: 569px) {
 
